<resources>
    <string name="app_name">StringApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Евгений &lt;Havlong&gt; Гришин</string>
    <string name="nav_header_subtitle">grishin_evgenii@inbox.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sorted">Отсортированный массив</string>
    <string name="menu_hash">Хэширование</string>
    <string name="menu_tree">Дерево</string>
    <string name="menu_main">Запуск тестирования</string>
    <string name="time_label">Время:</string>
    <string name="time_avg_label">Среднее время:</string>
    <string name="cmp_label">Сравнений:</string>
    <string name="cmp_avg_label">Сравнений в среднем:</string>
    <string name="found_label">Найдено ключей:</string>
    <string name="header_hash">Результаты тестирования полиномиального хеширования</string>
    <string name="header_sorted">Результаты тестирования отсортированного массива</string>
    <string name="header_tree">Результаты тестирования дерева цифрового поиска</string>
    <string name="header_main">Введите количество и размер генерируемых ключей</string>
    <string name="limits_desc">Не выбирайте количество более 10000 и размер более 50 знаков</string>
    <string name="n">n</string>
    <string name="k">k</string>
    <string name="start">Старт</string>
    <string name="time_placeholder">%1$.1f мс</string>
    <string name="keys_placeholder">%1$.1f ключей</string>
</resources>
